new images and overall styling

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="container headers-landing">
             <div class="row">
                 <div class="col">
-                    <img src="./assets/images/contact-us.jpg" alt="woman holding mobile phone image" width=100% height=auto>
+                    <img src="./assets/images/contact.jpg" alt="phone image" width=100% height=auto>
                     <p class="ph-landing">Contact</p>
                 </div>
             </div>
@@ -99,8 +99,7 @@
     <div class="container contact-info">
         <div class="row no-gutters">
             <div class="col-6 offset-3">
-                <i class="fas fa-envelope fa-2x"></i>
-                <p>hi@coffeeproject.ie</p>
+                <i class="fas fa-envelope fa-2x"></i><p>hi@coffeeproject.ie</p>
                 <i class="fas fa-phone-square-alt fa-2x"></i>
                 <p>+35313657616</p>
                 <i class="fas fa-clock fa-2x"></i>
