--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
     </div>
   </div>
 
-  <!-- beans -->
+  <!-- coffees -->
 
   <div class="container headers-landing our-coffees-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image" class="our-coffees-img">
+        <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="our-coffees-img">
         <p class="ph-landing uppercase">coffees</p>
       </div>
     </div>
   </div>
 
-  <!-- cards for beans section -->
+  <!-- cards for coffees section -->
   
   <div class="container coffees-text my-4">
     <div class="row no-gutters">
@@ -126,7 +126,7 @@
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" class="ourcourses-img">
+        <img src="./assets/images/oucourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
         <p class="ph-landing uppercase">courses</p>
       </div>
     </div>
@@ -147,7 +147,6 @@
       </div>
 
       <div class="sca-text col-12">
-        <h2 class="text-center uppercase">SCA Courses</h2>
         <hr class="section-divider">
         <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere</p>
         <p>SCA is a controlled and certified education system with a curriculum written and updated by the best coffee experts in the coffee industry.</p>
@@ -163,8 +162,8 @@
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/brew-guides.png" alt="brewing vesels image" class="brewguides-img">
-        <p class="ph-landing">guides</p>
+        <img src="./assets/images/brewing.jpg" alt="brewing vesels image" class="brewguides-img">
+        <p class="ph-landing">brewing</p>
       </div>
     </div>
   </div>
@@ -173,23 +172,25 @@
 
  <!-- brewing cards -->
  
+ <div class="container brewing-div">
  <div class="container">
    <div class="row no-gutters">
-     <div class="col-12 text-center">
+     <div class="col-12 text-center pt-4">
        <p>Carefully measuring the ingredients, in a specific size or shape under the application of a particular heat, for the right amount of time.</p>
-       <p>Coffee should always be roasted recently and ground just before preparation. When making coffee consider:</p>
+       <p>Coffee should always be roasted recently and ground just before preparation.</p>
+       <p><u>When making coffee consider:</u></p>
      </div>
    </div>
  </div>
 
-  <div class="container">
+  <div class="container mt-4">
     <div class="card-columns d-inline-flex justify-content-center landingbrew-cards">
       <div class="row no gutters">
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <p><strong>Water</strong></p>
+            <div class="card-body text-center brew-cardsland">
+              <p>Water</p>
               <img src="./assets/images/water.png" alt="water icon" class="card-img">
               <p>More<a href="brewing.html"> >here</a>
             </div>
@@ -198,8 +199,8 @@
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <p><strong>Measure</strong></p>
+            <div class="card-body text-center brew-cardsland">
+              <p>Measure</p>
               <img src="./assets/images/measure.png" alt="measure icon" class="card-img">
               <p>More<a href="brewing.html"> >here</a>
             </div>
@@ -208,8 +209,8 @@
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <p><strong>Method</strong></p>
+            <div class="card-body text-center brew-cardsland">
+              <p>Method</p>
               <img src="./assets/images/method.png" alt="paper filter icon" class="card-img">
               <p>More<a href="brewing.html"> >here</a>
             </div>
@@ -218,8 +219,8 @@
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <p><strong>Grind</strong></p>
+            <div class="card-body text-center brew-cardsland">
+              <p>Grind</p>
               <img src="./assets/images/grind.png" alt="grinder icon" class="card-img">
               <p>More<a href="brewing.html"> >here</a>
             </div>
@@ -229,10 +230,18 @@
       </div>
     </div>
   </div>
+  </div>
 
-  <hr class="section-divider" 
-  
 <!-- carousel -->
+
+<div class="container">
+        <div class="row no-gutters">
+          <div class="col-12">
+            <h2 class="text-center uppercase my-5">What our customers are saying...</h2>
+          </div>
+          </div>
+        </div>
+
 
   <div class="container carousel-container">
     <div class="row no-gutters">
@@ -291,7 +300,6 @@
       </div>
     </div>
   </div>
-  <hr class="section-divider">
 
   <!-- quotes -->
 
@@ -299,8 +307,8 @@
     <div class="container quotes-container content-container">
       <section class="quotes">
         <div class="row">
-          <div class="col-12 page-header">
-            <h2 class="text-center uppercase">What our students are saying...</h2>
+          <div class="col-12">
+            <h2 class="text-center uppercase my-5">What our students are saying...</h2>
           </div>
         </div>
         <div class="row">
@@ -324,7 +332,7 @@
               </div>
               <div class="media-body">
                 <blockquote class="blockquote">
-                  <p> The perfect course! Loved every minute of it.</p>
+                  <p> The perfect course! I absolutely loved every minute of it.</p>
                   <p> (Molly Brady)</p>
                 </blockquote>
               </div>
@@ -337,7 +345,7 @@
               </div>
               <div class="media-body">
                 <blockquote class="blockquote">
-                  <p> I got a job within a week. I invested in myself and it paid off!</p>
+                  <p> I invested in myself and it has already paid off!</p>
                   <p> (Dan Smullen)</p>
                 </blockquote>
               </div>
@@ -346,21 +354,21 @@
         </div>
       </section>
 
-
+<hr class="section-divider">
 
       <!-- form -->
 
       <div class="container">
         <div class="row no-gutters">
           <div class="col-10 offset-1">
-            <h3 class="text-center form-heading uppercase">Espresso yourself</h3>
+            <h3 class="text-center form-heading uppercase">Enquiries welcome</h3>
             <form>
               <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
               <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-              <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+              <textarea rows="5" name="message" id="message" class="form-control" placeholder="Espresso yourself..." required></textarea>
               <div class="text-center">
                 <div class="col">
-                  <button type="submit" class="btn my-button my-border">Send message</button>
+                  <button type="submit" class="btn my-button my-border">Submit message</button>
                 </div>
               </div>
             </form>
