--- a/barista-sca.html
+++ b/barista-sca.html
@@ -53,7 +53,7 @@
         <div class="container main-landing">
             <div class="row">
                 <div class="col">
-                    <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
+                    <img src="./assets/images/oucourses.jpg" alt="roasted coffee beans image" width=100% height=auto>
                     <p class="ph-landing uppercase">courses</p>
                 </div>
             </div>
