overall styling of images

--- a/brewing-sca.html
+++ b/brewing-sca.html
@@ -53,7 +53,7 @@
 <div class="container main-landing">
     <div class="row">
       <div class="col">
-        <img src="./assets/images/oucourses.jpg" alt="roasted coffee beans image" width=100% height=auto>
+        <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcourses-img">
         <p class="ph-landing uppercase">courses</p>
       </div>
     </div>
