--- a/brewing.html
+++ b/brewing.html
@@ -53,7 +53,7 @@
 <div class="container headers-landing">
       <div class="row">
         <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto>
+          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto class="brewguides-img">
           <p class="ph-landing">Brewing</p>
         </div>
       </div>
