--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
 
     <div class="container main-container">
         <div class="container headers-landing">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col">
-                    <img src="./assets/images/contact.jpg" alt="phone image" width=100% height=auto>
+                    <img src="./assets/images/contact.jpg" alt="phone image" width=100% height=auto class="contact-img">
                     <p class="ph-landing">Contact</p>
                 </div>
             </div>
@@ -64,7 +64,7 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-10 offset-1 contact-form">
+            <div class="col-12 contact-form">
                 <p>Are you in the coffee business and would like to know more about our products and services?</p>
                 <p>Please get in touch.</p>
                 <p>We are passionate about what we do and are already excited at the prospect of working with you!</p>
