--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container headers-landing our-coffees-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="our-coffees-img">
+        <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
         <p class="ph-landing uppercase">coffees</p>
       </div>
     </div>
@@ -126,7 +126,7 @@
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/oucourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
+        <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img" class="ourcourses-img">
         <p class="ph-landing uppercase">courses</p>
       </div>
     </div>
