linking all pages

--- a/chemex.html
+++ b/chemex.html
@@ -46,10 +46,24 @@
 
   </header>
 
+<!-- brew guides -->
+
+<div class="container main-container">
+<div class="container headers-landing">
+      <div class="row">
+        <div class="col">
+          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto class="brewguides-img">
+          <p class="ph-landing">Brewing</p>
+        </div>
+      </div>
+    </div>
+    </div>
+  <br>
+
   <!-- main section -->
 
   <div class="container">
-    <div class="brewing-container main-container">
+    <div class="brewing-container">
       <div class="row">
         <div class="col">
           <h2>V60 | Chemex | Kalita</h2>
@@ -83,6 +97,11 @@
       </div>
     </div>
   </div>
+
+<div class="text-center">
+        <a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
+        </div>
+
   <hr class="section-divider">
 
   <!-- sub-section -->
