--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -236,6 +236,10 @@
         </div>
     </div>
 
+    <div class="text-center">
+        <a href="coffees.html" class="btn btn-info my-button my-border">Back</a>
+        </div>
+
     <!-- footer -->
 
     <footer>
