--- a/coffees.html
+++ b/coffees.html
@@ -15,9 +15,9 @@
 
   <header>
 
-    <! --- navbar --->
+    <!-- navbar -->
 
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,24 +47,24 @@
 
   </header>
 
-  <! --- main beans section --->
+  <!-- main beans section -->
 
   <div class="container main-container">
     <div class="container headers-landing">
-      <div class="row">
+      <div class="row no-gutters">
         <div class="col">
-          <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" width=100% height=auto>
+          <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcoffees-img">
           <p class="ph-landing">Coffees</p>
         </div>
       </div>
     </div>
   </div>
 
-  <! --- cards for beans section --->
+  <!-- cards for beans section -->
 
   <div class="container my-5">
     <div class="card-deck">
-      <div class="row">
+      <div class="row no-gutters">
 
         <div class="col-12 col-md-6">
 
