--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container my-4">
       <div class="row no-gutters">
         <div class="col-12">
           <div class="about">
@@ -91,7 +91,7 @@
 
   <!-- coffees -->
 
-  <div class="container headers-landing our-coffees-landing">
+  <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
         <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
@@ -101,23 +101,17 @@
   </div>
 
   <!-- cards for coffees section -->
-  
+
   <div class="container coffees-text my-4">
     <div class="row no-gutters">
       <div class="col-12">
-        <p>As one of the U. K’s leading coffee roasters & suppliers, we ethically & sustainably source all our green coffee beans from our direct trading partners across the world. We buy only new season harvests – this ensures our coffee really is as fresh as possible.</p>
-        <p>We also created the world's first triple certified coffee - approved by the Fairtrade Foundation, Rainforest Alliance and Organic Food Federation. Like all our coffee, it's roasted and packed to perfection (after all, we practically invented the science of coffee freshness).</p>
-        <p>You can find out more about our industry-leading roasting process here or continue to browse all of our latest wholesale coffees online via the links below.</p>
-        
-        
+        <p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
+        <p>You can browse all of our latest wholesale coffees online <a href="coffees.html" class="linkcoffees"> here</p></a>
+
+
       </div>
     </div>
   </div>
-
-
-
-
-
 
 
   <!-- sca courses -->
@@ -126,16 +120,13 @@
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img" class="ourcourses-img">
+        <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
         <p class="ph-landing uppercase">courses</p>
       </div>
     </div>
   </div>
 
-  <div class="sca-section my-5">
-
-    <div class="container">
-      <div class="row no-gutters">
+  <div class="sca-section my-4">
 
         <div class="container">
           <div class="row no-gutters">
@@ -152,14 +143,16 @@
         <p>SCA is a controlled and certified education system with a curriculum written and updated by the best coffee experts in the coffee industry.</p>
         <p>The program allows you to complete courses in six subject modules and three levels of certifications, amassing course credits that count towards the 100 points needed to gain SCA internationally recognized Coffee Diploma.</p>
         <p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points.</p>
-        <a href="intro.html" class="btn btn-info my-button my-border">Start here</a>
+        <div class="text-center">
+        <a href="intro.html" class="btn btn-info my-button my-border sca-button">Start here</a>
+        </div>
       </div>
     </div>
     </div>
-  
+
   <!-- brew guides -->
 
-  <div class="container headers-landing">
+  <div class="container headers-landing mt-4">
     <div class="row no-gutters">
       <div class="col-12">
         <img src="./assets/images/brewing.jpg" alt="brewing vesels image" class="brewguides-img">
@@ -171,14 +164,14 @@
   <br>
 
  <!-- brewing cards -->
- 
+
  <div class="container brewing-div">
  <div class="container">
    <div class="row no-gutters">
      <div class="col-12 text-center pt-4">
        <p>Carefully measuring the ingredients, in a specific size or shape under the application of a particular heat, for the right amount of time.</p>
        <p>Coffee should always be roasted recently and ground just before preparation.</p>
-       <p><u>When making coffee consider:</u></p>
+       <p>When making coffee always consider:</p>
      </div>
    </div>
  </div>
@@ -190,9 +183,8 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cardsland">
-              <p>Water</p>
-              <img src="./assets/images/water.png" alt="water icon" class="card-img">
-              <p>More<a href="brewing.html"> >here</a>
+              <a href="brewing.html#water">Water
+              <img src="./assets/images/water.png" alt="water icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -200,9 +192,8 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cardsland">
-              <p>Measure</p>
-              <img src="./assets/images/measure.png" alt="measure icon" class="card-img">
-              <p>More<a href="brewing.html"> >here</a>
+            <a href="brewing.html#measure">Measure
+              <img src="./assets/images/measure.png" alt="measure icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -210,9 +201,8 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cardsland">
-              <p>Method</p>
-              <img src="./assets/images/method.png" alt="paper filter icon" class="card-img">
-              <p>More<a href="brewing.html"> >here</a>
+              <a href="brewing.html#method">Method
+              <img src="./assets/images/method.png" alt="paper filter icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -220,9 +210,8 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cardsland">
-              <p>Grind</p>
-              <img src="./assets/images/grind.png" alt="grinder icon" class="card-img">
-              <p>More<a href="brewing.html"> >here</a>
+            <a href="brewing.html#grind">Grind</a>
+              <img src="./assets/images/grind.png" alt="grinder icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -236,8 +225,8 @@
 
 <div class="container">
         <div class="row no-gutters">
-          <div class="col-12">
-            <h2 class="text-center uppercase my-5">What our customers are saying...</h2>
+          <div class="col-10 offset-1">
+            <h3 class="text-center uppercase my-5">What our customers are saying...</h3>
           </div>
           </div>
         </div>
@@ -245,7 +234,7 @@
 
   <div class="container carousel-container">
     <div class="row no-gutters">
-      <div class="col-12">
+      <div class="col-10 offset-1">
 
         <div id="testimonialscarousel" class="carousel slide" data-ride="carousel">
 
@@ -303,62 +292,64 @@
 
   <!-- quotes -->
 
-  <div class="container-wrapper">
-    <div class="container quotes-container content-container">
-      <section class="quotes">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="text-center uppercase my-5">What our students are saying...</h2>
+    <div class="container quotes-container">
+        <div class="row no-gutters">
+          <div class="col-10 offset-1">
+            <h3 class="text-center uppercase my-5">What our students are saying...</h3>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-lg-4">
+        <div class="row no-gutters">
+          <div class="col-10 offset-1 col-lg-3">
             <div class="media">
               <div class="d-none d-sm-block">
                 <img src="./assets/images/man1.jpg" class="my-border mr-3 p-2" height=100 width=100>
               </div>
               <div class="media-body">
                 <blockquote class="blockquote">
-                  <p> I got a job from doing this course within a week. Really recommended!</p>
+                  <p> "I got a job from doing this course within a week. Really recommended!"</p>
+                    <div class="d-none d-sm-block">
                   <p> (Luis Angel) </p>
+                  </div>
                 </blockquote>
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-10 offset-1 col-lg-3">
             <div class="media">
               <div class="d-none d-sm-block">
                 <img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2" height=100 width=100>
               </div>
               <div class="media-body">
                 <blockquote class="blockquote">
-                  <p> The perfect course! I absolutely loved every minute of it.</p>
+                  <p> "The perfect course! I absolutely loved every minute of it."</p>
+                  <div class="d-none d-sm-block">
                   <p> (Molly Brady)</p>
+                  </div>
                 </blockquote>
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-10 offset-1 col-lg-3">
             <div class="media">
               <div class="d-none d-sm-block">
                 <img src="./assets/images/man2.jpg" class="my-border mr-3 p-2" height=100 width=100>
               </div>
               <div class="media-body">
                 <blockquote class="blockquote">
-                  <p> I invested in myself and it has already paid off!</p>
+                  <p> "I invested in myself and it has already paid off!"</p>
+                    <div class="d-none d-sm-block">
                   <p> (Dan Smullen)</p>
+                  </div>
                 </blockquote>
               </div>
             </div>
           </div>
-        </div>
-      </section>
-
-<hr class="section-divider">
+          </div>
+          </div>
 
       <!-- form -->
 
-      <div class="container">
+      <div class="container signup-container">
         <div class="row no-gutters">
           <div class="col-10 offset-1">
             <h3 class="text-center form-heading uppercase">Enquiries welcome</h3>
@@ -420,7 +411,7 @@
               </div>
               <div class="col-6 my-info d-inline-flex justify-content-center">
                 <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
-                <span class="sr-only">Github</span><span>&nbsp;</span><p>2019| ©roxheff</p> 
+                <span class="sr-only">Github</span><span>&nbsp;</span><p>2019| ©roxheff</p>
               </div>
             </div>
           </div>
