--- a/intro.html
+++ b/intro.html
@@ -53,7 +53,7 @@
         <div class="container main-landing">
             <div class="row no-gutters">
                 <div class="col">
-                    <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcourses-img">
+                    <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" class="ourcourses-img">
                     <p class="ph-landing uppercase">courses</p>
                 </div>
             </div>
@@ -69,7 +69,7 @@
 
                 <div class="media mt-5 py-3 my-border">
                     <img src="./assets/images/intro-coffee-sca.png" alt="green coffee beans image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body mt-5">
+                    <div class="col media-body mt-5">
                         <h2 class="uppercase mb-2">Introduction to coffee</h2>
                         <p class="mr-2">This module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
                     </div>
