--- a/cafetiere.html
+++ b/cafetiere.html
@@ -45,11 +45,24 @@
         </nav>
 
     </header>
+<!-- brew guides -->
+
+<div class="container main-container">
+<div class="container headers-landing">
+      <div class="row">
+        <div class="col">
+          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto class="brewguides-img">
+          <p class="ph-landing">Brewing</p>
+        </div>
+      </div>
+    </div>
+    </div>
+  <br>
 
     <!-- main section -->
 
     <div class="container">
-        <div class="brewing-container main-container">
+        <div class="brewing-container">
             <div class="row">
                 <div class="col">
                     <h2>The French Press (Cafetiere)</h2>
@@ -81,6 +94,11 @@
             </div>
         </div>
     </div>
+
+    <div class="text-center">
+        <a href="brewing.html" class="btn btn-info my-button my-border">Back</a>
+        </div>
+
     <hr class="section-divider">
 
     <!-- sub-section -->
