--- a/coffees-single.html
+++ b/coffees-single.html
@@ -233,6 +233,10 @@
         </div>
     </div>
 
+    <div class="text-center">
+        <a href="coffees.html" class="btn btn-info my-button my-border">Back</a>
+        </div>
+
     <!-- footer -->
     <footer>
         <div class="footer">
