styling of intro, barista-sca, brewing-sca and brewing.html

--- a/barista-sca.html
+++ b/barista-sca.html
@@ -51,7 +51,7 @@
 
     <div class="container main-container">
         <div class="container main-landing">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col">
                     <img src="./assets/images/ourcourses.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcourses-img">
                     <p class="ph-landing uppercase">courses</p>
@@ -63,25 +63,25 @@
     <!-- media object -->
 
     <div class="container">
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col">
 
-                <div class="media mt-5 py-3 my-border">
+                <div class="media">
                     <img src="./assets/images/barista-sca.png" alt="latte art image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body mt-5">
-                        <h2 class="uppercase mb-2">Barista SCA</h2>
+                    <div class="media-body">
+                        <h2 class="uppercase my-2 barista">Barista SCA</h2>
                         <p class="mr-2">This course is for people new to the coffee industry, with no experience, and focuses on the key skills required to work in a coffee shop, like how to set your grinder, make espresso and foam and texture milk for cappuccinos.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="row no-gutters">
+            <div class="col-10 offset-1">
                 <div class="sca-content">
-                    <h3 class="text center uppercase">Overview</h3>
+                    <h3 class="text center uppercase text-center">Overview</h3>
                     <hr class="section-divider">
                     <p>Explore the differences between Arabicas and Robustas and how to maintain freshness.</p>
                     <p>Extract the perfect espresso following a set of steps that make up the industry discipline.</p>
@@ -98,7 +98,7 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-6 offset-3">
+            <div class="col-10 offset-1">
                 <h3 class="text-center form-heading">Sounds interesting?</h3>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
