--- a/brewing-sca.html
+++ b/brewing-sca.html
@@ -63,13 +63,13 @@
 <!-- media object -->
 
     <div class="container">
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col">
 
-                <div class="media mt-5 py-3 my-border">
+                <div class="media py-3">
                     <img src="./assets/images/brewing-sca.png" alt="cupping coffee image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body mt-5">
-                        <h2 class="uppercase mb-2">Brewing SCA</h2>
+                    <div class="media-body">
+                        <h2 class="uppercase my-2 brewing">Brewing SCA</h2>
                         <p class="mr-2">Foundation level introduces the beginner to the different ways of brewing coffee, from Chemex and syphon to V60 and French press. This course is suitable for people with no experience in this field.</p>
                     </div>
                 </div>
@@ -79,9 +79,9 @@
 
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-10 offset-1">
                 <div class="sca-content">
-                    <h3 class="text center uppercase">Overview</h3>
+                    <h3 class="text center uppercase text-center">Overview</h3>
                     <hr class="section-divider">
                     <p>Brewing guidelines for industry standard coffee.</p>
                     <p>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</p>
@@ -98,7 +98,7 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-6 offset-3">
+            <div class="col-10 offset-1">
                 <h3 class="text-center form-heading">Sounds interesting?</h3>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
