--- a/brewing.html
+++ b/brewing.html
@@ -53,7 +53,7 @@
 <div class="container headers-landing">
       <div class="row">
         <div class="col">
-          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" width=100% height=auto class="brewguides-img">
+          <img src="./assets/images/brewing.jpg" alt="brewing vessels image" class="brewguides-img">
           <p class="ph-landing">Brewing</p>
         </div>
       </div>
@@ -61,56 +61,56 @@
     </div>
   <br>
 
-<div class="container">
-  <div class="row">
-    <div class="col text-center">
-      <h3>Great coffee is useless without great brewing.</h3>
-      <p>We do half the work, now it’s your turn...</p>
-      <hr class="section-divider">
-      <p>Learn how to brew that perfect cup at home and don’t be afraid to experiment either!</p>
-      <p>Click on each method below to learn more.</p>
-      <p><strong>You are welcome!</strong></p>
-    </div>
-  </div>
-</div>
-  <! --- brew cards/links to downloadable pdfs --->
+  <!-- brew cards/links to downloadable pdfs -->
 
-  <div class="container">
-    <div class="card-columns d-inline-flex justify-content-center">
-      <div class="row no gutters">
+  <div class="container brewing-div">
+ <div class="container">
+   <div class="row no-gutters">
+     <div class="col-12 text-center pt-4">
+       <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
+       <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
+       <p>The growing trend or movement for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
+       <p>While we support all styles of coffee brewing, always consider:</p>
+     </div>
+   </div>
+ </div>
+
+  <div class="container mt-4">
+    <div class="card-columns d-inline-flex justify-content-center landingbrew-cards">
+      <div class="row no-gutters">
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <a href="aeropress.html">Aeropress
-              <img src="./assets/images/aeropress.png" alt="aeropress icon" class="card-img"></a>
+            <div class="card-body text-center brew-cardsland">
+              <a href="brewing.html#water">Water
+              <img src="./assets/images/water.png" alt="water icon" class="card-img"></a>
             </div>
           </div>
         </div>
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <a href="cafetiere.html">Cafetiere
-              <img src="./assets/images/french-press.png" alt="cafetiere icon" class="card-img"></a>
+            <div class="card-body text-center brew-cardsland">
+            <a href="brewing.html#measure">Measure
+              <img src="./assets/images/measure.png" alt="measure icon" class="card-img"></a>
             </div>
           </div>
         </div>
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <a href="chemex.html">Chemex
-              <img src="./assets/images/chemex.png" alt="chemex icon" class="card-img"></a>
+            <div class="card-body text-center brew-cardsland">
+              <a href="brewing.html#method">Method
+              <img src="./assets/images/method.png" alt="paper filter icon" class="card-img"></a>
             </div>
           </div>
         </div>
 
         <div class="col-6 col-md-3">
           <div class="card">
-            <div class="card-body text-center brew-cards">
-              <a href="espresso.html">Espresso
-              <img src="./assets/images/espresso-machine.png" alt="espresso machine icon" class="card-img"></a>
+            <div class="card-body text-center brew-cardsland">
+            <a href="brewing.html#grind">Grind</a>
+              <img src="./assets/images/grind.png" alt="grinder icon" class="card-img"></a>
             </div>
           </div>
         </div>
@@ -118,18 +118,22 @@
       </div>
     </div>
   </div>
+  </div>
+
+
 
   <hr class="section-divider">
 
   <div class="container">
-    <div class="row">
+    <div class="row no-gutters">
       <div class="col">
-        <h2>Handy filter coffee brewing tips</h2>
+        <h3>Handy filter coffee brewing tips</h3>
         <p class="uppercase">Buy fresh, grind fresh</p>
         <ul>
             <div id="water" name="water">
           <li class="uppercase">use good water</li>
           <p>Water is the main ingredient in your coffee so can have a big impact on taste. Always use filtered water, especially if you live in a hard water area (or try bottled water). Make sure the water is the same temperature each time you brew - just off the boil is fine, or if you have a thermometer, try aiming for 95°.</p>
+          <p>
             </div>
             <div id="measure" name="measure">
           <li class="uppercase">Measure your coffee</li>
