--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="container headers-landing">
             <div class="row no-gutters">
                 <div class="col">
-                    <img src="./assets/images/contact.jpg" alt="phone image" width=100% height=auto class="contact-img">
+                    <img src="./assets/images/contact.jpg" alt="phone image" class="contact-img">
                     <p class="ph-landing">Contact</p>
                 </div>
             </div>
@@ -64,7 +64,7 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-12 contact-form">
+            <div class="col contact-form">
                 <p>Are you in the coffee business and would like to know more about our products and services?</p>
                 <p>Please get in touch.</p>
                 <p>We are passionate about what we do and are already excited at the prospect of working with you!</p>
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <h2 class="text-center form-heading uppercase">Don't be a stranger</h2>
+                <h2 class="text-center form-heading uppercase">All enquiries welcome</h2>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
