--- a/intro.html
+++ b/intro.html
@@ -63,15 +63,15 @@
 
     <!-- media object -->
 
-    <div class="container">
-        <div class="row">
+    <div class="container media-container">
+        <div class="row no-gutters">
             <div class="col">
 
-                <div class="media mt-5 py-3 my-border">
-                    <img src="./assets/images/intro-coffee-sca.png" alt="green coffee beans image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="col media-body mt-5">
-                        <h2 class="uppercase mb-2">Introduction to coffee</h2>
-                        <p class="mr-2">This module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
+                <div class="media media-intro">
+                    <img src="./assets/images/intro-coffee-sca.png" alt="green coffee beans image" class="align-self-center" style="width:50vw">
+                    <div class="col media-body">
+                        <h4 class="uppercase my-2 intro">Intro to coffee</h4>
+
                     </div>
                 </div>
             </div>
@@ -83,9 +83,9 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="sca-content">
-                    <h3 class="text center uppercase">Overview</h3>
+                    <h3 class="text-center uppercase mt-2">Overview</h3>
                     <hr class="section-divider">
                     <p>This course charts coffee’s journey from its origins in Ethiopia to the major commodity it is today, enjoyed by millions of people around the world.</p>
                     <p>From farming the cherries through drying, roasting, brewing and finally drinking, this module looks at the processes coffee goes through.</p>
@@ -103,7 +103,7 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-6 offset-3">
+            <div class="col-10 offset-1">
                 <h3 class="text-center form-heading">Sounds interesting?</h3>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
